Improved 'Desktop' code